# Talos

./: README.md  convert-logo.mjs  index.html  package-lock.json  package.json  tsc_output.txt  tsc_output_utf8.txt  update-icons.js  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  themes.ts
src-tauri/: Cargo.toml  check_output.txt  errors.txt  errors2.txt  errors3.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs
src/components/: ConfirmationModal.tsx  Logo.tsx  MessageBubble.tsx  ModelSelector.tsx  SettingsModal.tsx  TitleBar.tsx
src/context/: ThemeContext.tsx
src/hooks/: useChat.ts  useConversations.ts
src/themes/: index.ts
src/types/: index.ts
